# WiMLaM

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: display_settings.rs  error.rs  main.rs  monitor.rs  preset.rs
src/app/: action.rs  input.rs  mod.rs
src/app/menu/: main.rs  manage_preset.rs  mod.rs  preset_list.rs
wix/: main.wxs
