[package]
name = "windows_monitor_layout"
version = "0.1.0"
edition = "2024"

[dependencies]
clone_dyn = "0.58.0"
color-eyre = "0.6.5"
dirs = "6.0.0"
num_enum = "0.7.5"
once_cell = "1.21.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sysinfo = { version = "0.38.0", features = [
    "windows",
    "system",
], default-features = false }
thiserror = "2.0.18"
win-hotkeys = "0.5.1"

windows = { version = "0.62.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }
